Add Java desktop packaging hooks